--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -131,25 +131,22 @@
                         <details>
                           <summary>Can I navigate away while scraping?</summary>
                           <div>
-                            Yes, as long as the app web interface displaying Instagram is opened. Scraping is run at another thread. Not your main UI thread. But that means you are doing several things simultaneously which immediately smells like
-                            human bot behaviors. Staying tuned till all downloads are finished is recommended unless you provide different accounts via <b>Settings > Private mode</b>.
+                            Yes, as long as the app web interface displaying Instagram is opened. Scraping is run at another thread. Not your main UI thread. But that means you are doing several things simultaneously which immediately smells like human bot behaviors. Staying tuned till all downloads are finished is recommended unless you provide different accounts via <b>Settings > Private mode</b>.
 
                           </div>
                         </details>
                         <details>
                           <summary>Is scraping safe for my account?</summary>
                           <div>
-                            No. Use at your own risk. Use a dummy account. It is not allowed. You had been warned before scraping. If not prepared, and not knowing how to play nice, do not scrape. Necessary measures had been provided to minimize the
-                            algorithm triggers such as to make it behave like human with some configurable intervals, reduces rate limits, persistent UA and cookies, etc. No guarantees whatsoever.
+                            No. Use at your own risk. Use a dummy account. You had been warned before scraping. If not prepared, and not knowing good practises, do not scrape. Necessary measures had been provided to minimize the algorithm triggers such as to make it behave like human with some configurable intervals, reduces rate limits, persistent UA and cookies, etc. No guarantees whatsoever.
                           </div>
                         </details>
                         <details>
                           <summary>Any scrape recommendations?</summary>
                           <div>
-                            No recommendations. Unfortunately scraping is bot behaviors, hardly human. Bots are b.a.n.n.e.d, mostly. Just know what you are doing. Common sense applies:
+                            No recommendations. Unfortunately scraping is bot behaviors. Bots are b.a.n.n.e.d, mostly. Common sense applies:
                             <ul>
-                              <li>Normal human actions: click, open, close, back, scroll up and down. Do not repeat the same task too much, including donwload, or even like, too much. Don't do anything just too much. Anything preceded by too is not
-                                good, including too good.</li>
+                              <li>Normal human actions: click, open, close, back, scroll up and down. Do not repeat the same task too much, including donwload, or even like, too much. Don't do anything just too much. Anything preceded by too is not good, including too good.</li>
                               <li>Stop downloading anything when reaching 300 per 24 hour. Unless you are caught earlier. You will be prompted a number when scraping, make a note.</li>
                               <li>Only download 100 at most at a time. You can rescan the rest tomorrow.</li>
                               <li>Have backup dummy accounts, many.</li>
@@ -168,8 +165,7 @@
                         <details>
                           <summary>What is <i>Organize directories</i> for?</summary>
                           <div>
-                            To organize your photos or videos thematically for offline convenience. You can put wild life media into <b>Wildlife</b> folder, food and beverages into <b>Cooking</b>, etc. Above all, you can put them all into an external
-                            removable disk for greater storage rooms rather than being stored internally.
+                            To organize your photos or videos thematically for offline convenience. You can put wild life media into <b>Wildlife</b> folder, food and beverages into <b>Cooking</b>, etc. Above all, you can put them all into an external removable disk for greater storage rooms rather than being stored internally.
                           </div>
                         </details>
                         <details>
@@ -206,9 +202,7 @@
                         <details>
                           <summary>Some features are not functioning?</summary>
                           <div>
-                            Visit Android <b>Settings > Apps > VIP Downloader > Permissions</b>, or visit <b>Settings > Permissions</b> for a shortcut. Check the 3 dot menu on the top right to view <b>All permissions</b>. Enable the needed
-                            permissions. Anything disabled will not function. Restart the app! Don't be scared by descriptions unless you distrust the app developer. VIP Downloader is harmless regardless of spooky descriptions. Please note,
-                            sideloading is not supported as we use the new upload format using App bundle, not regular APK. Only install via Google Play Store!
+                            Visit Android <b>Settings > Apps > VIP Downloader > Permissions</b>, or visit <b>Settings > Permissions</b> for a shortcut. Check the 3 dot menu on the top right to view <b>All permissions</b>. Enable the needed permissions. Anything disabled will not function. Restart the app! Don't be scared by descriptions unless you distrust the app developer. VIP Downloader is harmless regardless of spooky descriptions. Please note, sideloading is not supported as we use the new upload format using App bundle, not regular APK. Only install via Google Play Store!
 
                           </div>
                         </details>
@@ -222,19 +216,14 @@
                         <details>
                           <summary>How to repost videos or pictures?</summary>
                           <div>
-                            Tap any thumbnail to open the gallery display, or hit <b>Images</b> or <b>Videos</b> menu on the drawer. Find a button with a Repost sign (like seen at Twitter with Retweet), and tap that <b>Regram or repost</b> button. Be
-                            sure to give credit to owners, and seek for their permissions. Or provide the configurable watermark as a credit in the least.
+                            Tap any thumbnail to open the gallery display, or hit <b>Images</b> or <b>Videos</b> menu on the drawer. Find a button with a Repost sign (like seen at Twitter with Retweet), and tap that <b>Regram or repost</b> button. Be sure to give credit to owners, and seek for their permissions. Or provide the configurable watermark as a credit in the least.
 
                           </div>
                         </details>
                         <details>
                           <summary>Nothing downloaded?</summary>
                           <div>
-                            Wait for a few seconds. In order for auto download to work, be sure that <b>VIP Downloader</b> is already open before downloading anything on Instagram. You can tap <b>VIP Downloader</b> icon when prompted to verify
-                            the download process. Or ignore it to continue browsing. The icon will disappear after a few seconds. Yet images or videos should be downloaded automatically as long as this app is not killed. <br><br>If failed for a
-                            reason, you can
-                            always manually paste the clipboard link into the provided text input. Lastly, also check if the image or video is already downloaded. Be sure to bookmark or fave them at Instagram to avoid unnecessary confusion with
-                            downloads.
+                            Check your internet connection. Wait for a few seconds. A friendly <b>VIP Downloader</b> icon is prompted to notify download is happening. Ignore it to continue browsing. The icon will disappear after a few seconds. Yet images or videos should be downloaded automatically as long as this app is not killed. <br><br>If failed for a reason, you can always manually paste the clipboard link into the provided text input. Lastly, also check if the image or video is already downloaded. Be sure to bookmark or like them as markers at Instagram to avoid unnecessary confusion with downloads.
 
                           </div>
                         </details>
@@ -361,9 +350,10 @@
                         <details>
                           <summary>Know Bugs</summary>
                           <div>
-                            <b>Know Bugs</b>
+                            <b>Know Bugs/ Issues</b>
                             <ul>
                               <li>Camera not working in Android 10 (API 29). Please ignore till the next fix.</li>
+                              <li>Links for sensitive contents and private accounts are gated with some time-sensitive tokens, identified by 3-5x times longer links. The links can expire any seconds. Once failed at slow internet connections, old links are expired already which cause broken downloads. Delete them, and re-download.</li>
                             </ul>
                           </div>
                         </details>
@@ -371,7 +361,7 @@
                         <details>
                           <summary>Tips!</summary>
                           <div>
-                            Basically quick or long tap or pinch zoom anything to access regular or zoom displays. If something broken, try restarting the app, and see if any better.
+                            Basically quick or long tap or pinch zoom anything to access regular or zoom displays. If something broken, try restarting the app, and see if any better. Please use <b>Archives</b> and <b>Favorites</b> features to prioritize and organize better.
                           </div>
                         </details>
                         
