--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -73,7 +73,7 @@
                             <ul>
                               <li>can only use the web interface provided by the app.</li>
                               <li>requires login via app to access both private and public accounts.</li>
-                              <li>can download anywhere by long pressing thumbnails. Or press the Instagram <b>Bookmark</b> icon at full page. Or hit Instagram <b>Copy link</b> like seen at public accounts</li>
+                              <li>can download anywhere by long pressing thumbnails. Or press the Instagram <b>BOOKMARK</b> or <b>LIKE</b> icon or <b>TIME</b>. Or hit Instagram <b>Copy link</b>.</li>
                               <li>can scrape both private or public accounts.</li>
                             </ul>
                             <b>Public or external</b>:
@@ -83,22 +83,22 @@
                               <li>can only download via Instagram <b>Copy link</b> at public or private accounts</li>
                               <li>can not scrape.</li>
                             </ul>
-                            Due to the latest restrictions, providing a dummy or nothing-to-lose Instagram account is required via <b>Settings > Private mode</b> in order to make it work for both public and private accounts. No need to be the same as
-                            the currently-in-use Instagram account, except for private accounts (or at least both accounts, if different, should follow the same private accounts).
+                            Due to the latest restrictions, providing a dummy or nothing-to-lose Instagram account is required via <b>Settings > Private mode</b> in order to make it work for both public and private accounts. No need to be the same as the currently-in-use Instagram account, except for private accounts (or at least both accounts, if different, should follow the same private accounts).
 
                           </div>
                         </details>
                         <details>
-                          <summary>How does downloading private account media work?</summary>
+                          <summary>How does downloading media work?</summary>
                           <div>
-                            <b>Three ways:</b>
+                            <b>Five ways:</b>
                             <ol>
                               <li>Long press a media thumbnail (such as seen at /explore, /tags, /search or profile pages, any page which list small thumbnails) to save. The app will download it when you signal a long press.</li>
-                              <li>Visit its full page, and hit or press the Instagram <b>Bookmark</b> icon at full page.</li>
+                              <li>Hit the Instagram <b>BOOKMARK</b> icon.</li>
+                              <li>Hit the Instagram <b>LIKE</b> icon.</li>
+                              <li>Long press the post creation <b>TIME</b>, or practically any link which contains post links.</li>
                               <li>Use Instagram app, and hit regular <b>Copy link</b> for both public and private accounts.</li>
                             </ol>
-                            For the first two, login via app web interface is required so that the app can see what you see without any special authorization. The app does not care about your credentials. It just borrows your authorized eyes under
-                            the hood due to Instagram restrictions.
+                            For the first four, using the app web interface is required so that the app can see what you see without any special authorization. The app does not care about your credentials. It just borrows your authorized eyes under the hood due to Instagram restrictions.
 
                           </div>
                         </details>
