--- a/project/vipinstagram/howto/index.html
+++ b/project/vipinstagram/howto/index.html
@@ -57,12 +57,12 @@
                           <div>
                             <ol>
                               <li>Long press on any small thumbnails (videos or images) at listing pages: <i>/tags, /explore, /profile, or search pages</i>, etc.</li>
-                              <li>Or tap the <b>BOOKMARK</b> icon at listings with larger images, or full page views.</li>
-                              <li>Or tap the <b>LIKE</b> icon at listings with larger images, or full page views.</li>
-                              <li>Or long press the post creation <b>TIME</b> at listings with larger images, or full page views.</li>
-                              <li>Or tap the three vertical dots at the top right coder, and hit <b>Copy link</b>.</li>
+                              <li>Or tap the <b>BOOKMARK</b> icon.</li>
+                              <li>Or tap the <b>LIKE</b> icon.</li>
+                              <li>Or long press the post creation <b>TIME</b>.</li>
+                              <li>Or tap the three vertical dots at the top right corner, and hit <b>Copy link</b>.</li>
                             </ol>
-                            <p>The first four are applicable if using the provided private/ internal web app. The last can be any public browsers, or Instagram app.</p>
+                            <p>The first four are applicable only if using the provided private/ internal web app interface. The last can be any public browsers, or Instagram app.</p>
                             <img src="https://gausarts.github.io/project/vipinstagram/howto/instagram-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/instagram-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/instagram-large.jpg 1024w" alt="How to download Instagram photos and videos easily" />
 
                           </div>
@@ -74,14 +74,15 @@
                               <li><b>Video</b>:
                               <ul>
                                 <li>Long press on post creation <b>TIME</b> (e.g.: 1h or 19m) to the right of username at each card of listing pages.</li>
-                                <li>Or tap the <b>SHARE</b> icon at bottom right of card at listings, and hit <b>Copy link to Tweet</b>.</li>
+                                <li>Or tap the <b>SHARE</b> icon at bottom right of card listings, and hit <b>Copy link to Tweet</b>.</li>
                               </ul>
                               <li><b>Image</b>: 
                               <ul>
-                                <li>Long press on images <b>internal to</b> or hosted in Twitter. Not those leading to external sites, identified by <b>https://t.co/...</b> url.</li>
+                                <li>Long press on images <b>internal to</b> or hosted in Twitter.</li>
                               </ul>
                           </ol>
-                          <p>Be informed! Only works for a stand-alone tweet, not the one embedded inside another tweet. Just visit its original tweet to download.</p>
+                          <p>Be informed! Only works for a stand-alone tweet, not the one embedded inside another tweet. Just visit its original tweet to download. Images leading to external sites, identified by <b>https://t.co/...</b> url, not internally hosted at Twitter, are not supported.</p>
+                          
                           <img src="https://gausarts.github.io/project/vipinstagram/howto/twitter-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/twitter-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/twitter-large.jpg 1024w" alt="How to download Twitter photos and videos easily" />
 
                           </div>
