--- a/project/vipinstagram/howto/index.html
+++ b/project/vipinstagram/howto/index.html
@@ -90,7 +90,7 @@
                         <details>
                           <summary>Tips!</summary>
                           <div>
-                            Basically long tap on any links leading to the full pages if at listing page identified by small thumbnails. Or find and hit <b>Copy link</b>. If the images in this tutorial section are not visible, be sure to connect internet.</p>
+                            Basically long tap on any links leading to the full pages -- at listing page identified by small thumbnails. Or find and hit <b>Copy link</b>, normally displayed after clicking <b>SHARE</b> icon, or alike. If the images in this tutorial section are not visible, be sure to connect internet.</p>
                           </div>
                         </details>
                       </div>
