--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -354,6 +354,7 @@
                             <ul>
                               <li>Camera not working in Android 10 (API 29). Please ignore till the next fix.</li>
                               <li>Links for sensitive contents and private accounts are gated with some time-sensitive tokens, identified by 3-5x times longer links. The links can expire any seconds. Once failed at slow internet connections, old links are expired already which cause broken downloads. Delete them, and re-download.</li>
+                              <li>Be warned! Do not use the app web interface to register accounts. It is just a webview, not real browser, too many limitations may break registration process, like upload, paste etc. Use real browsers or official apps for registrations. Only use it once you have an account to login, not to register a new one.</li>
                             </ul>
                           </div>
                         </details>
