--- a/project/vipinstagram/howto/index.html
+++ b/project/vipinstagram/howto/index.html
@@ -63,7 +63,27 @@
                               <li>Or tap the three vertical dots at the top right corner, and hit <b>Copy link</b>.</li>
                             </ol>
                             <p>The first four are applicable only if using the provided private/ internal web app interface. The last can be any public browsers, or Instagram app.</p>
-                            <img src="https://gausarts.github.io/project/vipinstagram/howto/instagram-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/instagram-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/instagram-large.jpg 1024w" alt="How to download Instagram photos and videos easily" />
+                            <img src="https://gausarts.github.io/project/vipinstagram/howto/instagram-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/instagram-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/instagram-large.jpg 1024w" alt="How to download Instagram photos and videos easily with Android" />
+
+                          </div>
+                        </details>
+                        <details>
+                          <summary>Reddit</summary>
+                          <div>
+                          <ol>
+                              <li><b>Video</b>:
+                              <ul>
+                                <li>Long press on <b>TITLES</b> or <b>PICTURES</b>.</li>
+                                <li>Or tap <b>COPY</b> icon.</li>
+                              </ul>
+                              <li><b>Image</b>:
+                              <ul>
+                                <li>Idem ditto.</li>
+                              </ul>
+                          </ol>
+
+
+                          <img src="https://gausarts.github.io/project/vipinstagram/howto/reddit-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/reddit-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/reddit-large.jpg 1024w" alt="How to download Reddit videos easily with Android" />
 
                           </div>
                         </details>
@@ -76,14 +96,52 @@
                                 <li>Long press on post creation <b>TIME</b> (e.g.: 1h or 19m) to the right of username at each card of listing pages.</li>
                                 <li>Or tap the <b>SHARE</b> icon at bottom right of card listings, and hit <b>Copy link to Tweet</b>.</li>
                               </ul>
-                              <li><b>Image</b>: 
+                              <li><b>Image</b>:
                               <ul>
                                 <li>Long press on images <b>internal to</b> or hosted in Twitter.</li>
                               </ul>
                           </ol>
                           <p>Be informed! Only works for a stand-alone tweet, not the one embedded inside another tweet. Just visit its original tweet to download. Images leading to external sites, identified by <b>https://t.co/...</b> url, not internally hosted at Twitter, are not supported.</p>
-                          
-                          <img src="https://gausarts.github.io/project/vipinstagram/howto/twitter-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/twitter-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/twitter-large.jpg 1024w" alt="How to download Twitter photos and videos easily" />
+
+                          <img src="https://gausarts.github.io/project/vipinstagram/howto/twitter-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/twitter-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/twitter-large.jpg 1024w" alt="How to download Twitter photos and videos easily with Android" />
+
+                          </div>
+                        </details>
+                        <details>
+                          <summary>TikTok</summary>
+                          <div>
+                          <ol>
+                              <li><b>Video</b>:
+                              <ul>
+                                <li>Tap the <b>SHARE</b> icon at bottom right, and hit <b>Copy link</b>.</li>
+                              </ul>
+                              <li><b>Image</b>:
+                              <ul>
+                                <li>No supports.</li>
+                              </ul>
+                          </ol>
+
+
+                          <img src="https://gausarts.github.io/project/vipinstagram/howto/tiktok-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/tiktok-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/tiktok-large.jpg 1024w" alt="How to download TikTok videos easily with Android" />
+
+                          </div>
+                        </details>
+                        <details>
+                          <summary>Vimeo</summary>
+                          <div>
+                          <ol>
+                              <li><b>Video</b>:
+                              <ul>
+                                <li>Long press on <b>TITLES</b> or <b>PICTURES</b>.</li>
+                              </ul>
+                              <li><b>Image</b>:
+                              <ul>
+                                <li>No supports.</li>
+                              </ul>
+                          </ol>
+
+
+                          <img src="https://gausarts.github.io/project/vipinstagram/howto/vimeo-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/vimeo-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/vimeo-large.jpg 1024w" alt="How to download TikTok videos easily with Android" />
 
                           </div>
                         </details>
