--- a/project/vipinstagram/license/index.html
+++ b/project/vipinstagram/license/index.html
@@ -75,8 +75,8 @@
                                   <small>BSD, part MIT and Apache 2.0<br>
                                     <span class="licenseowner">Copyright (c) 1994 Anthony Dekker</span></small></a></p>
                               <hr>
-                              <!-- 
-                              
+                              <!--
+
                               <p><a class="plain menuitem" href="#apache"><b>Retrofit</b> &#10143;<br>
         <small>The Apache License<br>
             <span class="licenseowner">Copyright (C) 2013 Square, Inc.</span></small></a></p><hr> -->
@@ -112,7 +112,7 @@
                                   <small>The Apache License<br>
                                     <span class="licenseowner">Copyright (C) 2016 Amit Shekhar</span></small></a></p>
                               <hr>
-                              
+
                               <p><a class="plain menuitem" href="#apache"><b>Android libraries</b> &#10143;<br>
                                   <small>The Apache License<br>
                                     <span class="licenseowner">Copyright (C) 2006 (various years) The Android Open Source Project</span><br>
@@ -191,18 +191,7 @@ THIS SOFTWARE IS PROVIDED BY THE REGENTS AND CONTRIBUTORS ``AS IS'' AND ANY EXPR
         </div>
       </div>
       <footer class="l-footer">
-        <div class="l-container">
-          <div class="l-footer__bottom">
-            <div class="region region-footer-fifth">
-              <div data-drupal-messages-fallback class="hidden"></div>
-              <div id="block-footercopyright--2" class="block--footercopyright--2 block block--block-content">
-                <div class="clearfix text-formatted field field--name-body field--type-text-with-summary field--label-hidden field__item">
-                  <p>© 2008 gaus.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+        <p><small>© 2008 gaus | <a href="https://play.google.com/store/apps/details?id=vip.gaus.instagramphotovideodownloader.free"><b>VIP Downloader for Instagram, Facebook, Reddit, Tiktok, Twitter, Vimeo</b></a></small></p>
       </footer>
     </div>
   </div>
