--- a/project/vipinstagram/license/index.html
+++ b/project/vipinstagram/license/index.html
@@ -17,7 +17,7 @@
   <title>License | gaus</title>
   <style>
   *,::before,::after{box-sizing:border-box}html,body{padding:0;margin:0;font-size:18px;line-height:1.2;overflow-x:hidden}html{width:100%;font-size:100%;line-height:1.4}body{font-family:'Roboto',sans-serif;margin:0;padding:0;max-width:100%;word-wrap:break-word;position:relative}ul,ol{margin:0;padding:0 0 .25em 2em}img,video,audio,iframe{display:block;border:0}img,video,audio,iframe,pre,blockquote{width:100%;max-width:100%;height:auto;margin:1em auto}pre,.pre,code,p{word-wrap:break-word}pre,.pre{white-space:pre-wrap;font-size:82%;font-family:'Consolas',monospace}pre code,p + code{display:block;padding:1em;width:100%}blockquote{font-family:'Roboto Slab';padding:.5em 10px;font-size:110%}h1,h2,h3,h4,h5,h6{font-family:'Roboto Slab';font-weight:300}h1{font-size:140%}h2{font-size:135%}h3{font-size:120%}del{text-decoration:line-through}table{border:0;border-spacing:0;font-size:82%;margin:10px 0;max-width:100%;width:100%}tr{padding:.1em .6em}thead > tr{border-bottom:1px solid #eaeaea}tr:nth-of-type(even){background:rgba(0,0,0,0.105)}table tr th{background:rgba(0,0,0,0.51);color:#fff;border-bottom-style:none}table tbody tr th{vertical-align:top}tr td,tr th{padding:4px 9px;text-align:left}td p{display:inline}.media{display:block;height:0;overflow:hidden;width:100%;position:relative;padding-bottom:56.25%}.media iframe{display:block;height:100%;left:0;position:absolute;top:0;width:100%}pre{transition:all .2s}div.license{display:none;position:absolute;top:0;left:0;min-height:600px;width:100%;z-index:99}a{text-decoration:none}a.menuitem{display:block;color:inherit!important}.close{border:0;background:none;display:none;font-size:2em;padding:5px 10px;position:fixed;right:0;top:0;z-index:101;-webkit-backface-visibility:hidden;backface-visibility:hidden}.license__content{overflow-y:scroll;position:relative;min-height:600px}div.license:target{display:block}.is-boxed{overflow:hidden;min-height:210px}.is-boxed #menu{display:none}.is-boxed .close{display:block}
-    details summary::-webkit-details-marker{display:none}details[open] summary~*{animation:open .3s ease-in-out}@keyframes open{0%{opacity:0}100%{opacity:1}}details summary{width:100%;padding:.75rem 0;border-top:1px solid #444;position:relative;cursor:pointer;font-size:.92rem;font-weight:300;list-style:none}details summary::after{content:"+";color:#999;position:absolute;font-size:1rem;line-height:0;margin-top:.5rem;right:0;font-weight:200;transform-origin:center;transition:200ms linear}details[open] summary::after{transform:rotate(45deg)}details summary{outline:0}summary~*{font-size:.92rem;line-height:1.6;margin:0 0 1rem;padding-top:1rem}@media screen and (max-width: 1025px){.page__title{visibility:hidden;position:absolute}}
+    details summary::-webkit-details-marker{display:none}details[open] summary~*{animation:open .3s ease-in-out}@keyframes open{0%{opacity:0}100%{opacity:1}}details summary{width:100%;padding:.75rem 0;border-top:1px solid #444;position:relative;cursor:pointer;font-size:.92rem;font-weight:300;list-style:none}details summary::after{content:"+";color:#999;position:absolute;font-size:1rem;line-height:0;margin-top:.5rem;right:0;font-weight:200;transform-origin:center;transition:200ms linear}details[open] summary::after{transform:rotate(45deg)}details summary{outline:0}summary~*{font-size:.92rem;line-height:1.6;margin:0 0 1rem;padding-top:1rem}@media screen and (max-width: 1025px){.visible-desktop{visibility:hidden;position:absolute}}
   </style>
 </head>
 
@@ -36,7 +36,7 @@
           <div class="region region-featured-top">
             <div id="block-bartok-page-title--2" class="block--bartok-page-title--2 block block--core block--page-title-block">
               <div class="page__header">
-                <h1 class="page__title page-title">License</h1>
+                <h1 class="page__title page-title visible-desktop">License</h1>
               </div>
             </div>
           </div>
@@ -104,10 +104,10 @@
                                   <small>The Apache License<br>
                                     <span class="licenseowner">Copyright (C) 2016 The Android Open Source Project<br>Modifications (c) 2017 CommonsWare, LLC</span></small></a></p>
                               <hr>
-                              <!-- <p><a class="plain menuitem" href="#apache"><b>Fetch</b> &#10143;<br>
+                              <p><a class="plain menuitem" href="#apache"><b>Fetch</b> &#10143;<br>
                                   <small>The Apache License<br>
                                     <span class="licenseowner">Copyright 2017 Tonyo Francis</span></small></a></p>
-                              <hr> -->
+                              <hr>
                               <p><a class="plain menuitem" href="#apache"><b>Fast-Android-Networking</b> &#10143;<br>
                                   <small>The Apache License<br>
                                     <span class="licenseowner">Copyright (C) 2016 Amit Shekhar</span></small></a></p>
@@ -191,7 +191,7 @@ THIS SOFTWARE IS PROVIDED BY THE REGENTS AND CONTRIBUTORS ``AS IS'' AND ANY EXPR
         </div>
       </div>
       <footer class="l-footer">
-        <p><small>© 2008 gaus | <a href="https://play.google.com/store/apps/details?id=vip.gaus.instagramphotovideodownloader.free"><b>VIP Downloader for Instagram, Facebook, Reddit, Tiktok, Twitter, Vimeo</b></a></small></p>
+        <p><small>© 2008 gaus <span class="visible-desktop"></span>| <a href="https://play.google.com/store/apps/details?id=vip.gaus.instagramphotovideodownloader.free"><b>VIP Downloader for Instagram, Facebook, Reddit, Tiktok, Twitter, Vimeo</b></a></span></small></p>
       </footer>
     </div>
   </div>
