--- a/project/vipinstagram/howto/index.html
+++ b/project/vipinstagram/howto/index.html
@@ -101,6 +101,7 @@
                           <ol>
                               <li><b>Video</b>:
                               <ul>
+                                <li>Long press on any small video thumbnails at profile pages.</li>
                                 <li>Tap the <b>SHARE</b> icon at bottom right, and hit <b>Copy link</b>.</li>
                               </ul>
                               <li><b>Image</b>:
