--- a/project/vipinstagram/howto/index.html
+++ b/project/vipinstagram/howto/index.html
@@ -102,7 +102,7 @@
                               <li><b>Video</b>:
                               <ul>
                                 <li>Long press on any small video thumbnails at profile pages.</li>
-                                <li>Tap the <b>SHARE</b> icon at bottom right, and hit <b>Copy link</b>.</li>
+                                <li>Or tap the <b>SHARE</b> icon at bottom right, and hit <b>Copy link</b>.</li>
                               </ul>
                               <li><b>Image</b>:
                               <ul>
